--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,225 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-image: url(/tokyo-night.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Open Sans", sans-serif;
+  color: #222;
+  align-items: center;
+  height: 100vh;
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.container2 .title,
+.container2 .para {
+  position: relative;
+  align-content: flex-start;
+  margin: 0 10rem;
+  text-align: left;
+  padding: 0;
+}
+
+.container2 {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.portfolio {
+  justify-content: flex-start;
+}
+
+.hero {
+  background-image: url(/public/night-tokyo.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  height: 100vh;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  margin-bottom: 20px;
+  z-index: -2;
+}
+
+.hero::before {
+  background-size: cover;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
+
+.hero h1 {
+  font-size: 46px;
+  margin: -20px 0 20px;
+}
+
+.hero p {
+  font-size: 20px;
+  letter-spacing: 1px;
+}
+
+.content h2,
+.content h3 {
+  font-size: 150%;
+  margin: 20px 0;
+}
+
+.content p {
+  color: #555;
+  line-height: 30px;
+  letter-spacing: 1.2px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #999;
+}
+
+.footer h1 {
+  font-size: 1.2rem;
+  padding: 1.5rem 0;
+}
+
+.dropUpContainer {
+  position: relative;
+  width: 100%;
+}
+
+.dropUpContainer div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 1.5rem;
+}
+
+.contactTitle {
+  font-size: 4rem;
+}
+
+/* .formRows {
+  display: inline-block;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+} */
+
+/* DEMO-SPECIFIC STYLES */
+.typewriter h1 {
+  color: #fff;
+  font-family: monospace;
+  font-size: 4rem;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid purple; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: normal; /* Adjust as needed */
+  animation: typing 1s steps(20, end),
+    /* typing 3.5s steps(30) infinite, */ blink-caret 0.3s step-end infinite;
+}
+
+/* Navigation */
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: skyblue;
+  }
+}
+@media (max-width: 1300px) {
+  body {
+    min-height: unset !important;
+    height: 100vh;
+  }
+}
+@media (max-width: 580px) {
+  .typewriter h1 {
+    font-size: 3rem;
+    display: unset;
+  }
+
+  .contactTitle {
+    font-size: 3rem;
+    width: 25rem;
+  }
+
+  .container2 .title,
+  .container2 .para {
+    margin: 0;
+    width: 20rem;
+  }
+
+  .container2 .title {
+    font-size: 3rem;
+    padding: 1rem 0;
+  }
+
+  .container2 .para {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 380px) {
+  .typewriter .unset h1 {
+    font-size: 2.5rem;
+    display: unset;
+  }
+  .contactTitle {
+    font-size: 2.5rem;
+    width: 15rem;
+    height: 100%;
+  }
+
+  .container2 .title,
+  .container2 .para {
+    margin: 0;
+    width: 15rem;
+  }
+
+  .container2 .title {
+    font-size: 2.5rem;
+    padding: 1rem 0;
+  }
+
+  .container2 .para {
+    font-size: 1rem;
+  }
 }
